# server

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  wait-for-it.sh
k8s/: minio-pvc.yaml  mysql-init-script-configmap.yaml
server/: Cargo.toml
server/k8s/: minio-deployment.yaml  mysql-deployment.yaml  rust-server-deployment.yaml
server/mysql-init/: init.sql
server/src/: main.rs
src/: main.rs
