[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusoto_core = "0.47.0"
rusoto_credential = "0.47.0"
rusoto_s3 = "0.47.0"
warp = "0.3"
bytes = "1.1.0"




