[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
bytes = "1.1"
aws-sdk-s3 = "0.0.25-alpha"
aws-config = "0.0.25-alpha"
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
